--- a/WindowsNetworkManagement.csproj
+++ b/WindowsNetworkManagement.csproj
@@ -44,7 +44,9 @@
   <ItemGroup>
     <Compile Include="IPv4Validator.cs" />
     <Compile Include="NetworkSettingsControler.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
